tests/baselines/reference/uncaughtCompilerError1(strict=true).errors.txt
uncaughtCompilerError1.ts(1,13): error TS7005: Variable 'index' implicitly has an 'any' type.
uncaughtCompilerError1.ts(1,20): error TS7005: Variable 'lineTokens' implicitly has an 'any' type.
uncaughtCompilerError1.ts(1,32): error TS7005: Variable 'token' implicitly has an 'any' type.
uncaughtCompilerError1.ts(1,39): error TS7005: Variable 'tokens' implicitly has an 'any' type.


==== uncaughtCompilerError1.ts (4 errors) ====
    declare var index, lineTokens, token, tokens;
                ~~~~~
!!! error TS7005: Variable 'index' implicitly has an 'any' type.
                       ~~~~~~~~~~
!!! error TS7005: Variable 'lineTokens' implicitly has an 'any' type.
                                   ~~~~~
!!! error TS7005: Variable 'token' implicitly has an 'any' type.
                                          ~~~~~~
!!! error TS7005: Variable 'tokens' implicitly has an 'any' type.
    
    function f() {
        if (lineTokens[index].trim() === '=' && index > 0 && token.type === '' && tokens[index - 1].type === 'attribute.name.html') {
            if (index === (tokens.length - 1)) {
                return { appendText: '\"\"', advanceCount: 1 };
            }
            else if (tokens[index + 1].type !== 'attribute.value.html' && tokens[index + 1].type !== '') {
                return { appendText: '\"\"', advanceCount: 1 };
            }
            return null;
        }
    }
    